[tool.poetry]
name = "qart-codes-backend"
license = "MIT"
version = "0.0.1"
description = "Generates QR codes with pleasing corruptions described in natural language"
homepage = "https://tfs.ai/qart"
repository = "https://github.com/charlesfrye/qart-codes/backend"
authors = ["Charles Frye <cfrye59@gmail.com>"]
readme = "README.md"
